// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Factory  > Factory will create instance and collect metadata 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": [
      "context",
    ],
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/base",
      "route": "/test",
      "type": "get",
    },
    "name": "A",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "A",
  },
]
`;

exports[`Factory  > In extended case 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testB",
      "type": "get",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testA",
      "type": "get",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
]
`;

exports[`Factory  > decorator in extends case 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
      "test",
    ],
    "http": {
      "prefix": "",
      "route": "",
      "type": "post",
    },
    "name": "A",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "A",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {
      "class": "b",
      "method": "b",
    },
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
      "test",
      "test3",
      "test2",
    ],
    "http": {
      "headers": {
        "b": "b",
        "key": "b",
      },
      "prefix": "",
      "route": "",
      "type": "post",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {
      "class": "c",
      "method": "c",
    },
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
      "test3",
      "test2",
      "test",
    ],
    "http": {
      "headers": {
        "b": "b",
        "c": "c",
        "key": "c",
      },
      "prefix": "",
      "route": "/test",
      "type": "post",
    },
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "pipe": "C",
        "type": "body",
      },
    ],
    "tag": "C",
  },
]
`;

exports[`Factory  > multple class extends the same class 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testB",
      "type": "get",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testA",
      "type": "get",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test3",
    "guards": [],
    "http": {
      "prefix": "/C",
      "route": "/testC",
      "type": "get",
    },
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "C",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/C",
      "route": "/testA",
      "type": "get",
    },
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "C",
  },
]
`;
